# agentry

./: .env.example  .gitignore  CHANGELOG.md  COMPATIBILITY-SPEC.md  LICENSE  README.md  pipeline.example.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: architecture.md  design.md  how-to-use.md  release.md  v0.1-plan.md  watchdog-and-dashboard.md
docs/examples/medical-device/: README.md
docs/examples/medical-device/.agentry/: config.yml
docs/examples/medical-device/.skynet/: config.yml
docs/examples/medical-device/agentry/: config.yml
docs/examples/medical-device/docs/ai/roles/: cybersecurity_reviewer.md  quality_reviewer.md  regulatory_reviewer.md  risk_analyst.md  traceability_tracker.md
docs/examples/standard/: README.md
docs/examples/standard/.agentry/: config.yml
docs/examples/standard/agentry/: config.yml
docs/examples/standard/docs/ai/roles/: architect.md  implementer.md  researcher.md  (+2 more)
schemas/: skynet-config.schema.json
scripts/: add-to-target.ps1  add-to-target.sh  install-deps.ps1  install-deps.sh  install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/agentry/: __init__.py  __main__.py  cli.py  config.py  configure.py  dashboard.py  github.py  notify.py  orchestrator.py  prompt.py  runtime_control.py  session.py  supervisor.py  version.py  workpacket.py
src/agentry/defaults/: __init__.py
src/agentry/defaults/standard/: README.md  __init__.py  config.yml  start.ps1  start.sh
src/agentry/defaults/standard/roles/: architect.md  release.md  researcher.md  reviewer.md  tester.md
src/agentry/platform/: __init__.py  linux.py  windows.py
tests/: conftest.py  test_cli.py  test_config.py  test_configure.py  test_dashboard.py  test_github.py  test_notify.py  test_orchestrator.py  test_prompt.py  test_runtime_control.py  test_session.py  test_supervisor.py  test_supervisor_streamjson.py  test_workpacket.py
