[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentry"
version = "0.1.1"
description = "Autonomous multi-agent product organization. Research, design, implement, test, review, release."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "vinu-dev" }]
keywords = ["agents", "ai", "automation", "llm", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

dependencies = [
    "click>=8.1",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.5",
]

[project.scripts]
agentry = "agentry.cli:cli"

[project.urls]
Homepage = "https://github.com/vinu-dev/agentry"
Repository = "https://github.com/vinu-dev/agentry"
Issues = "https://github.com/vinu-dev/agentry/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentry"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "S", "RUF"]
ignore = [
    "S101",   # asserts in tests are fine
    "S603",   # subprocess calls — we know what we're doing
    "S607",   # subprocess with relative path — by design (CLI on PATH)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
